tests222/tests/test33.out
lli: <stdin>:1:1: error: expected top-level entity
line 4: identifier a is already defined
^
